finished implementation of number of changes manager